# aspm27

./: .gitignore  test.js
UI/css/: chat-window.css  contacts-window.css  general.css
UI/html/: index.html
UI/js/: app.js
server/: Cargo.toml  db.sqlite3
server/src/: auth.rs  config.rs  db.rs  extractor.rs  handler.rs  main.rs  models.rs
