[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
